--- a/client.html
+++ b/client.html
@@ -13,16 +13,49 @@
     <h1 class="title">Team map #1</h1>
 
     <script type="text/javascript">
-        function initialize() {
+        var map = null,
+            user_marker = null;
+
+        function userPositionUpdated(geoposition) {
+            console.debug('position: ', geoposition);
+            var pos = { lat: geoposition.coords.latitude, lng: geoposition.coords.longitude};
+
+            if(user_marker == null)
+                user_marker = new google.maps.Marker({ position: pos, map: map });
+            else
+                user_marker.setPosition(pos);
+
+            map.setCenter(pos);
+            map.setZoom(17);
+        }
+
+        function initializeLocationTracking() {
+            var localizationFailed = function() {
+                console.error("Can't get user's location.");
+            };
+            if (navigator.geolocation) {
+                var navOptions = {
+                    enableHighAccuracy: true,
+                    timeout: 2000,
+                    maximumAge: 0
+                };
+                navigator.geolocation.watchPosition(userPositionUpdated, localizationFailed, navOptions);
+            } else {
+                localizationFailed();
+            }
+        }
+
+        function initializeMap() {
             var mapOptions = {
                 center: { lat: -34.397, lng: 150.644},
-                zoom: 8
+                zoom: 8,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
             };
-            var map = new google.maps.Map(document.getElementById('map-canvas'),
-                    mapOptions);
+            return new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
         }
         $(document).ready(function () {
-            initialize();
+            map = initializeMap();
+            initializeLocationTracking();
         })
     </script>
 
